Add missing icon and update list of projects and template.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta http-equiv="X-Frame-Options" content="DENY">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{page.title}} - IPP Sample Implementations</title>
+    <title>{{page.title}}</title>
     <meta name="keywords" content="printing,internet printing protocol,ipp,ipp everywhere">
   </head>
   <body>
@@ -17,7 +17,6 @@
       <ul>
         <li><a href="http://www.pwg.org/">ISTO-PWG</a></li>
         <li><a href="http://istopwg.github.io/">Projects</a></li>
-        <li><a href="index.html">ippsample</a></li>
       </ul>
     </div>
     {{ content }}
@@ -25,7 +24,7 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-12">
-	    <p>Copyright &copy; 2014-2016 by The Printer Working Group and copyright &copy; 2007-2016 by Apple Inc.</p>
+	    <p>Copyright &copy; 2016 by The Printer Working Group.</p>
 	  </div>
 	</div>
       </div>
