Update copyright text.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-12">
-	    <p>Copyright &copy; 2016 by The Printer Working Group.</p>
+	    <p>Copyright &copy; 2016 by The ISTO Printer Working Group.</p>
 	  </div>
 	</div>
       </div>
