Do some cleanup/re-organization.
Add some bootstrap bits for the future.

Add a mockup of a new PWG web site home page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="simple-grid.css">
-    <link rel="stylesheet" type="text/css" href="pwg.css">
+    <link rel="stylesheet" type="text/css" href="css/simple-grid.css">
+    <link rel="stylesheet" type="text/css" href="css/pwg.css">
     <link rel="shortcut icon" href="apple-touch-icon.png" type="image/png">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{page.title}}</title>
-    <meta name="keywords" content="printing,internet printing protocol,ipp,ipp everywhere">
+    <meta name="keywords" content="printing,internet printing protocol,ipp,ipp everywhere,semantic model">
   </head>
   <body>
     <div class="nav">
@@ -20,13 +20,7 @@
     </div>
     {{ content }}
     <div class="foot">
-      <div class="container">
-	<div class="row">
-	  <div class="col-12">
-	    <p>Copyright &copy; 2016 by The ISTO Printer Working Group.</p>
-	  </div>
-	</div>
-      </div>
+      <p>Copyright &copy; 2016 by The ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are registered trademarks of the IEEE-ISTO. Please contact the <a href="mailto:webmaster@pwg.org">PWG Webmaster</a> to report problems with this site.</p>
     </div>
   </body>
 </html>
