--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -149,6 +149,17 @@ button.close {
     width: 900px;
   }
 }
+.modal-header:before,
+.modal-header:after,
+.modal-footer:before,
+.modal-footer:after {
+  display: table;
+  content: " ";
+}
+.modal-header:after,
+.modal-footer:after {
+  clear: both;
+}
 
 /* Glyphicons */
 @font-face {
