--- a/_layouts/beta2.html
+++ b/_layouts/beta2.html
@@ -55,7 +55,7 @@
     </div>
     {{ content }}
     <div class="foot">
-      <p>Copyright &copy; 2016 by The ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are registered trademarks of the IEEE-ISTO. Please contact the <a href="mailto:webmaster@pwg.org">PWG Webmaster</a> to report problems with this site.</p>
+      <p>Copyright &copy; 2016-{{ site.time | date: "%Y" }} by The ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are registered trademarks of the IEEE-ISTO. Please contact the <a href="mailto:webmaster@pwg.org">PWG Webmaster</a> to report problems with this site.</p>
     </div>
     <script type="text/javascript" src="../../js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="../../js/modal.js"></script>
