Start work on ippsample project content.
Add project template.

Update base CSS.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -30,6 +30,9 @@
               </div>
             </li>
           </ul>
+          <span class="navbar-text">{{page.project}}
+          <a href="https://travis-ci.org/istopwg/{{page.project}}"><img src="https://travis-ci.org/istopwg/{{page.project}}.svg?branch=master"></a>
+          <a href="https://build.snapcraft.io/user/istopwg/{{page.project}}"><img src="https://build.snapcraft.io/badge/istopwg/{{page.project}}.svg"></a></span>
         </div>
       </nav>
     </header>
