--- a/css/pwg.css
+++ b/css/pwg.css
@@ -39,7 +39,7 @@ blockquote {
   color: white;
   padding: 10px 20px 10px;
 }
-pre {
+pre, p.summary {
   border-left: solid 2px #4E5AA3;
   padding-left: 20px;
 }
