Sync up with color/font usage on main pwg.org site.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   </head>
   <body style="background: black;">
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background: rgba(0,0,0,.9);" role="navigation">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top" role="navigation">
         <a class="navbar-brand" href="https://www.pwg.org/"><img src="/apple-touch-icon.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pwgNavContent" aria-controls="pwgnav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
