Fix project templates.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -118,7 +118,11 @@
           </ul>
         </div>
       </div>
-      {{ content }}
+      <div class="row pwg-panel">
+        <div class="col-md-12 col-sm-12">
+          {{ content }}
+        </div>
+      </div>
     </div>
     <footer class="container-fluid">
       Copyright &copy; 2016-{{ site.time | date: "%Y" }} by The ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are trademarks of the IEEE-ISTO.<br>
