--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/apple-touch-icon.png" type="image/png">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=9">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{page.title}}</title>
     <meta name="keywords" content="printing,internet printing protocol,ipp,ipp everywhere,semantic model">
