--- a/_layouts/project-lite.html
+++ b/_layouts/project-lite.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="/css/pwg.css">
     <link rel="shortcut icon" href="/apple-touch-icon.png" type="image/png">
     <meta charset="utf-8">
@@ -12,99 +13,71 @@
     <meta name="keywords" content="printing,internet printing protocol,ipp,ipp everywhere,semantic model">
   </head>
   <body style="background: black;">
-    <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" role="navigation">
+      <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="/apple-touch-icon.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#pwgNavContent" aria-controls="pwgnav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#pwg-nav-collapse" aria-controls="pwg-nav-collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="pwgNavContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="pwgAboutContent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-              <div class="dropdown-menu" aria-labelledby="pwgAboutContent">
-                <a class="dropdown-item" href="/about.html">About the PWG</a>
-                <a class="dropdown-item" href="/chair/index.html">PWG Officers</a>
-                <a class="dropdown-item" href="/members.html">PWG Members</a>
-                <a class="dropdown-item" href="/members.html#JOINING">Joining</a>
-                <a class="dropdown-item" href="/chair/participating.html">Participating</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/bofs.html">BOF Sessions</a>
-                <a class="dropdown-item" href="/mailhelp.html">Mailing Lists</a>
-                <a class="dropdown-item" href="/chair/meeting-info/meetings.html">Meetings</a>
-                <a class="dropdown-item" href="https://ieee-isto.org/privacy-policy/">Privacy Policy</a>
-              </div>
+        <div class="collapse navbar-collapse" id="pwg-nav-collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">About</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/about.html">About the PWG</a></li>
+                <li><a class="dropdown-item" href="/chair/index.html">PWG Officers</a></li>
+                <li><a class="dropdown-item" href="/members.html">PWG Members</a></li>
+                <li><a class="dropdown-item" href="/members.html#JOINING">Joining</a></li>
+                <li><a class="dropdown-item" href="/chair/participating.html">Participating</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/bofs.html">BOF Sessions</a></li>
+                <li><a class="dropdown-item" href="/mailhelp.html">Mailing Lists</a></li>
+                <li><a class="dropdown-item" href="/chair/meeting-info/meetings.html">Meetings</a></li>
+                <li><a class="dropdown-item" href="https://ieee-isto.org/privacy-policy/">Privacy Policy</a></li>
+              </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="pwgWorkContent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Work</a>
-              <div class="dropdown-menu" aria-labelledby="pwgWorkContent">
-                <h6 class="dropdown-header">Publications</h6>
-                <a class="dropdown-item" href="/informational.html">Informational Documents</a>
-                <a class="dropdown-item" href="/namespaces.html">Namespaces</a>
-                <a class="dropdown-item" href="/standards.html">Standards</a>
-                <div class="dropdown-divider"></div>
-                <h6 class="dropdown-header">Technologies</h6>
-                <a class="dropdown-item" href="/3d/index.html">3D Printing</a>
-                <a class="dropdown-item" href="/ipp/everywhere.html">IPP Everywhere&trade;</a>
-                <a class="dropdown-item" href="/sm/model.html">PWG Semantic Model</a>
-              </div>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Our Work</a>
+              <ul class="dropdown-menu">
+                <li><h6 class="dropdown-header">Publications</h6></li>
+                <li><a class="dropdown-item" href="/informational.html">Informational Documents</a></li>
+                <li><a class="dropdown-item" href="/namespaces.html">Namespaces</a></li>
+                <li><a class="dropdown-item" href="/standards.html">Standards</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><h6 class="dropdown-header">Technologies</h6></li>
+                <li><a class="dropdown-item" href="/3d/index.html">3D Printing</a></li>
+                <li><a class="dropdown-item" href="/ipp/everywhere.html">IPP Everywhere&trade;</a></li>
+                <li><a class="dropdown-item" href="/sm/model.html">PWG Semantic Model</a></li>
+              </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="pwgWGContent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Workgroups</a>
-              <div class="dropdown-menu" aria-labelledby="pwgWGContent">
-                <h6 class="dropdown-header">Active Workgroups</h6>
-                <a class="dropdown-item" href="/ids/index.html">Imaging Device Security</a>
-                <a class="dropdown-item" href="/ipp/index.html">Internet Printing Protocol</a>
-                <div class="dropdown-divider"></div>
-                <h6 class="dropdown-header">Inactive Workgroups</h6>
-                <a class="dropdown-item" href="/cloud/index.html">Cloud Imaging Model</a>
-                <a class="dropdown-item" href="/sm/index.html">Semantic Model</a>
-                <a class="dropdown-item" href="/wims/index.html">Workgroup for Imaging Management Solutions</a>
-              </div>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Workgroups</a>
+              <ul class="dropdown-menu">
+                <li><h6 class="dropdown-header">Active Workgroups</h6></li>
+                <li><a class="dropdown-item" href="/ids/index.html">Imaging Device Security</a></li>
+                <li><a class="dropdown-item" href="/ipp/index.html">Internet Printing Protocol</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><h6 class="dropdown-header">Inactive Workgroups</h6></li>
+                <li><a class="dropdown-item" href="/cloud/index.html">Cloud Imaging Model</a></li>
+                <li><a class="dropdown-item" href="/sm/index.html">Semantic Model</a></li>
+                <li><a class="dropdown-item" href="/wims/index.html">Workgroup for Imaging Management Solutions</a></li>
+              </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="pwgProjContent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Github Projects</a>
-              <div class="dropdown-menu" aria-labelledby="pwgProjContent">
-                <a class="dropdown-item" href="/github.html">All Projects</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/ippeveselfcert/index.html">IPP Everywhere&trade; Printer Self-Certification</a>
-                <a class="dropdown-item" href="/ippregistry/index.html">IPP Registry</a>
-                <a class="dropdown-item" href="/ippsample/index.html">IPP Sample Code</a>
-                <a class="dropdown-item" href="/pwg-books/index.html">PWG Books</a>
-              </div>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Github Projects</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/github.html">All Projects</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/ippeveselfcert/index.html">IPP Everywhere&trade; Printer Self-Certification</a></li>
+                <li><a class="dropdown-item" href="/ippregistry/index.html">IPP Registry</a></li>
+                <li><a class="dropdown-item" href="/ippsample/index.html">IPP Sample Code</a></li>
+                <li><a class="dropdown-item" href="/pwg-books/index.html">PWG Books</a></li>
+              </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#modalSearch" data-toggle="modal" data-target="#modalSearch">Search<!--<img src="/images/search.png" width="20" height="20" align="top">--></a></li>
           </ul>
-          <span class="navbar-text">{{page.project}}</span>
+          <form action="https://duckduckgo.com/" method="get" class="d-flex ms-auto me-0">
+            <input type="hidden" name="sites" value="pwg.org">
+            <input class="form-control" style="width: 80%;" type="search" name="q" placeholder="Search" aria-label="Search"><button class="btn btn-primary mr-0" type="submit"><i class="bi bi-search"></i></button>
+          </form>
         </div>
       </nav>
     </header>
-    <div id="modalSearch" class="modal fade" tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-        <!-- Modal content-->
-        <div class="modal-content">
-           <div class="modal-header">
-             <h4 class="modal-title">Search PWG</h4>
-             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-               <span aria-hidden="true">&times;</span>
-             </button>
-           </div>
-           <div class="modal-body">
-             <script type="text/javascript" async="" src="https://cse.google.com/cse.js?cx=018021367961685880654:mdt584m83r4"></script><script>
-               (function() {
-             var cx = '018021367961685880654:mdt584m83r4';
-             var gcse = document.createElement('script');
-             gcse.type = 'text/javascript';
-             gcse.async = true;
-             gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-             var s = document.getElementsByTagName('script')[0];
-             s.parentNode.insertBefore(gcse, s);
-               })();
-             </script>
-             <gcse:search></gcse:search>
-           </div>
-           <div class="modal-footer">
-             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-           </div>
-        </div>
-      </div>
-    </div>
     <div class="container-fluid" style="background: white;">
       <div class="row pwg-panel pwg-base">
         <div class="col-md-12 col-sm-12">
@@ -122,17 +95,15 @@
         </div>
       </div>
     </div>
-    <footer class="container-fluid">
-      Copyright &copy; 2016-{{ site.time | date: "%Y" }} by The ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are trademarks of the IEEE-ISTO.<br>
-      <a href="/about.html">About the PWG</a>
-      &middot;
-      <a href="https://ieee-isto.org/privacy-policy/">Privacy Policy</a>
-      &middot;
-      <a href="mailto:webmaster@pwg.org">PWG Webmaster</a>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand navbar-dark bg-dark justify-content-center">
+      <span class="navbar-text">Copyright &copy; 2001-{{ site.time | date: "%Y" }} by The IEEE-ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are trademarks of the IEEE-ISTO.</span>
+      <ul class="navbar-nav ms-4">
+        <li class="nav-item"><a class="nav-link" href="/about.html">About the PWG</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://ieee-isto.org/privacy-policy/">Privacy Policy</a></li>
+        <li class="nav-item"><a class="nav-link" href="mailto:webmaster@pwg.org">PWG Webmaster</a></li>
+      </ul>
+    </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/js/pwg-cookie-notice.js"></script>
   </body>
 </html>
