--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -92,7 +92,7 @@
       </div>
     </div>
     <nav class="navbar navbar-expand navbar-dark bg-dark justify-content-center">
-      <span class="navbar-text">Copyright &copy; 2001-{{ site.time | date: "%Y" }} by The IEEE-ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are trademarks of the IEEE-ISTO.</span>
+      <span class="navbar-text">Copyright &copy; 2001-{{ site.time | date: "%Y" }} by The ISTO Printer Working Group. IPP Everywhere, the IPP Everywhere logo, and the PWG logo are trademarks of the ISTO.</span>
       <ul class="navbar-nav ms-4">
         <li class="nav-item"><a class="nav-link" href="/about.html">About the PWG</a></li>
         <li class="nav-item"><a class="nav-link" href="https://ieee-isto.org/privacy-policy/">Privacy Policy</a></li>
